More realsitic tests